# BasicsOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt  tasks.c  tests.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
